<resources>
    <string name="app_name">AE001V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agenda Escolar</string>
    <string name="nav_header_subtitle">Oscar Chan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="add">Nuevo</string>
    <string name="user">Usuario</string>
    <string name="name_alumn">Alumno</string>
    <string name="horario">Horario</string>
    <string name="home_works">Tareas</string>
    <string name="notes">Notas</string>
    <string name="about">Acerca de</string>
    <string name="build">build 2</string>
    <string name="fase">beta1</string>
    <string name="version">Version 0.1</string>
    <string name="softchan">SOFTCHAN</string>
    <string name="by">By Oscar Chan</string>
    <string name="infouser">Informacion de usuario</string>
    <string name="idschool">Matricula o # de control</string>
    <string name="name_school">Nombre de escuela</string>
    <string name="especialidad">Especialidad</string>
    <string name="number_phone">Número de teléfono</string>
    <string name="addinfouser">Agregar informacion usuario</string>
    <string name="addsubject">Agregar Asignaturas</string>
    <string name="name_subject">Nombre de asignatura</string>
    <string name="profesor">Docente</string>
    <string name="aula">Aula/salón</string>
    <string name="save">Guardar</string>
    <string name="nuevanota">Nueva nota</string>

    <string name="menu_agenda">Agenda</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>