<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/view_agenda"
            android:title="Resumen" />

        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/horario"
            android:title="@string/horario"/>

        <item
            android:id="@+id/nav_tareas"
            android:icon="@drawable/menu_book"
            android:title="@string/home_works"/>

        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/notes"
            android:title="@string/notes"/>
    </group>

    <item android:title="Group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/action_settings" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/about"
                    android:title="@string/about"/>
            </group>
        </menu>
    </item>

</menu>