<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.agenda.AgendaFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_icae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/text_by"
        android:text="@string/softchan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="80dp"/>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canal"
        android:textColor="@color/canal_color_text"
        android:textSize="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"/>
</LinearLayout>