<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/app_bar_addalum"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_id"
                android:hint="@string/idschool"
                android:padding="20dp"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/id"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account"
                android:background="@android:drawable/editbox_background_normal"/>

            <EditText
                android:id="@+id/edt_name_user"
                android:hint="@string/name_alumn"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/account"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account"
                android:background="@android:drawable/editbox_background_normal"/>

            <EditText
                android:id="@+id/edt_name_school"
                android:hint="@string/name_school"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/school"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account"
                android:background="@android:drawable/editbox_background_normal"/>

            <EditText
                android:id="@+id/edt_especialidad"
                android:hint="@string/especialidad"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/especialidad"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account"
                android:background="@android:drawable/editbox_background_normal"/>

            <EditText
                android:id="@+id/edt_number_phone"
                android:hint="@string/number_phone"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/number_phone"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account"
                android:inputType="phone"
                android:background="@android:drawable/editbox_background_normal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>