<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/app_bar_addsubject"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_name_subject"
                android:hint="@string/name_subject"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/diamond"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/diamond"
                android:theme="@style/Widget.Design.TextInputLayout"/>

            <EditText
                android:id="@+id/edt_profesor"
                android:hint="@string/profesor"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/diamond"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/diamond"
                android:theme="@style/Widget.Design.TextInputLayout"/>

            <EditText
                android:id="@+id/edt_aula"
                android:hint="@string/aula"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/diamond"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/diamond"
                android:theme="@style/Widget.Design.TextInputLayout"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>